data/judge/log.txt
data/judge/under_judgement.cpp:1:1: error: expected unqualified-id before numeric constant
 654654
 ^
